<resources>
    <string name="app_name">ToDo List</string>

    <!-- Main Activity -->
    <string name="large_title">My ToDo list</string>
    <string name="done_sublabel" formatted="true">Done — %d</string>
    <string name="new_task">New task</string>

    <!-- Create new task activity -->
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="priority">Priority</string>
    <string name="no_priority">No</string>
    <string name="low_priority">Low</string>
    <string name="high_priority">High</string>
    <string name="finish_until">Finish until</string>
    <string name="edit_text_hint">What needs to be done…</string>
    <string name="add_task_button">Add task</string>
    <string name="select_time">Select time</string>

    <!-- Settings screen -->
    <string name="choose_theme">Choose the app theme:</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="system_mode">System</string>

    <!-- Network info -->
    <string name="sync_error"> Synchronization error</string>
    <string name="auth_error"> Authorization error</string>
    <string name="no_element_error"> No such element on a server</string>
    <string name="server_error"> Server error</string>
    <string name="retry_snackbar"> Retry </string>
    <string name="internet_found"> Connected to the internet </string>
    <string name="internet_not_found"> No internet connection </string>

    <!-- Restore Snackbar -->
    <string name="restore_button">Restore</string>
    <string name="snackbar_delete_text">Deleted task </string>

    <string name="notifications_disabled">Notifications disabled</string>
    <!-- Arrays -->
    <string-array name="priorities">
        <item>Low</item>
        <item>Default</item>
        <item>High</item>
    </string-array>

    <string-array name="MONTHS">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
    </string-array>

</resources>