<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.FragmentListToDo">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:background="@color/back_primary">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:background="@color/back_primary"
            >

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:fitsSystemWindows="true"
                android:background="@color/back_primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/large_title"
                app:expandedTitleTextAppearance="@style/large_title_text"
                app:collapsedTitleTextAppearance="@style/title_text"
                app:expandedTitleTextColor="@color/label_primary"
                app:collapsedTitleTextColor="@color/label_primary"
                app:expandedTitleMarginStart="70dp"
                app:expandedTitleMarginBottom="44dp"
                app:collapsedTitleGravity="center">

                <!--android:layout_height="?attr/actionBarSize"-->
                <androidx.appcompat.widget.Toolbar
                    app:titleTextColor="@color/label_primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />

                <ImageView
                    android:id="@+id/imageSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings"
                    app:tint="@color/color_gray"
                    android:layout_gravity="bottom|start"
                    android:layout_marginStart="32dp"
                    app:layout_collapseMode="pin"
                    android:layout_marginBottom="18dp"
                    />

                <TextView
                    android:id="@+id/textViewDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:text="@string/done_sublabel"
                    style="@style/subhead_text"
                    android:layout_gravity="bottom"
                    app:layout_collapseMode="parallax"
                    android:layout_marginBottom="10dp"
                    />

                <ImageView
                    android:id="@+id/imageViewVisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_visibility"
                    app:tint="@color/color_blue"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="32dp"
                    app:layout_collapseMode="pin"
                    android:layout_marginBottom="18dp"
                    />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/pull_to_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_rectangleround"
            android:elevation="2dp"
            android:padding="8dp"
            android:layout_marginHorizontal="8dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:transitionGroup="true"
            tools:listitem="@layout/item_todo"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_add"
            app:tint="@color/color_white"
            android:backgroundTint="@color/color_blue"
            android:elevation="2dp"
            app:elevation="2dp"
            android:layout_margin="16dp"

            android:contentDescription="@string/add_task_button" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>